# BMPGL

./: Makefile  README.md  meson.build  shell.nix
BMP/: bmp.h  errors.h
src/: bmp.c
tests/: bpm.c  copy_bmp.c
